welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:24: error: not found: value FacingTrail
  while (FacingTrail==true) {
         ^